--- a/Ubiquitous2/View/StreamTopicSectionView.xaml
+++ b/Ubiquitous2/View/StreamTopicSectionView.xaml
@@ -5,10 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:View="clr-namespace:UB.View"
              mc:Ignorable="d" 
-             DataContext="{Binding StreamTopicSection, Source={StaticResource Locator}}"
+             DataContext="{Binding}"
              d:DesignHeight="300" d:DesignWidth="364.179">
     
-    <Grid Margin="5" VerticalAlignment="Top">
+    <Grid Margin="5" VerticalAlignment="Top" Background="White">
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="45"/>
@@ -20,9 +20,9 @@
         </Grid.ColumnDefinitions>
         <Image Height="80" Width="80" Source="{Binding StreamServiceIcon}" Grid.RowSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
-        <View:EditBoxView/>
-        <TextBox Text="Game title" Grid.Column="1" BorderBrush="#FF6C6C6C" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center" BorderThickness="1,1,0,0" Background="White"/>
-        <TextBox Text="Topic"  Grid.Column="2" BorderThickness="1,1,1,0" BorderBrush="#FF6C6C6C" VerticalContentAlignment="Center"/>
-        <TextBox Text="Description" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" BorderBrush="#FF6C6C6C" Margin="0"/>
+        <View:EditBoxView Grid.Column="1" DataContext="{Binding Game}" />
+        <!--<TextBox Text="Game title" Grid.Column="1" BorderBrush="#FF6C6C6C"  BorderThickness="1,1,0,0" Background="White"/>-->
+        <TextBox Text="{Binding Topic}"  Grid.Column="2" BorderThickness="1,1,1,0" BorderBrush="#FF6C6C6C" VerticalContentAlignment="Center"/>
+        <TextBox Text="{Binding Description}" Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="1" BorderBrush="#FF6C6C6C" Margin="0"/>
     </Grid>
 </UserControl>
