--- a/Ubiquitous2/View/DashBoardWindow.xaml
+++ b/Ubiquitous2/View/DashBoardWindow.xaml
@@ -11,7 +11,7 @@
         xmlns:View="clr-namespace:UB.View"
         Title="Dashboard"
         mc:Ignorable="d ignore"
-        DataContext="{Binding DashBoard, Source={StaticResource Locator}}" d:DesignWidth="660" d:DesignHeight="450" Width="660" Height="450" Background="#FF1E1E1E">
+        DataContext="{Binding DashBoard, Source={StaticResource Locator}}" d:DesignWidth="660" d:DesignHeight="450" Width="660" Height="450" Background="#FF1E1E1E" Icon="/Ubiquitous2;component/Resources/ubiquitous smile.ico">
 
     <i:Interaction.Behaviors>
         <Interactivity:WindowPersistentLocationBehavior WindowName="DashboardWindow"/>
