--- a/Ubiquitous2/App.xaml
+++ b/Ubiquitous2/App.xaml
@@ -1,25 +1,12 @@
-﻿<Application
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:vm="clr-namespace:UB.ViewModel"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:settings="clr-namespace:UB.Properties"
-             xmlns:Fluent="clr-namespace:Fluent;assembly=Fluent" x:Class="UB.App"
-    
-             StartupUri="\View\MainWindow.xaml"
-             mc:Ignorable="d">
-    
-    <Application.Resources>
-    	<ResourceDictionary>
-    		<ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Skins/Main/Skin.xaml"/>
-            </ResourceDictionary.MergedDictionaries>
-    		<!--Global View Model Locator-->
-    		<vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" />
-
-            <settings:Ubiquitous x:Key="Settings" />
-        </ResourceDictionary>
-    </Application.Resources>
-    
+<Application xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:vm="clr-namespace:UB.ViewModel" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:settings="clr-namespace:UB.Properties" xmlns:Fluent="clr-namespace:Fluent;assembly=Fluent" x:Class="UB.App" StartupUri="\View\MainWindow.xaml" mc:Ignorable="d">
+  <Application.Resources>
+    <ResourceDictionary>
+      <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="Skins/Main/Skin.xaml" />
+      </ResourceDictionary.MergedDictionaries>
+      <!--Global View Model Locator-->
+      <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" />
+      <settings:Ubiquitous x:Key="Settings" />
+    </ResourceDictionary>
+  </Application.Resources>
 </Application>
