--- a/Ubiquitous2/View/DashBoardWindow.xaml
+++ b/Ubiquitous2/View/DashBoardWindow.xaml
@@ -5,12 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ignore="http://www.ignore.com"
         xmlns:fluent="clr-namespace:Fluent;assembly=Fluent"
-        xmlns:Devart="clr-namespace:Devart.Controls"
+        xmlns:Devart="clr-namespace:Devart.Controls"        
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:Interactivity="clr-namespace:UB.Interactivity"
         xmlns:View="clr-namespace:UB.View"
         Title="Dashboard"
         mc:Ignorable="d ignore"
+        Topmost="True"
         DataContext="{Binding DashBoard, Source={StaticResource Locator}}" d:DesignWidth="660" d:DesignHeight="450" Width="660" Height="450" Background="#FF1E1E1E" Icon="/Ubiquitous2;component/Resources/ubiquitous smile.ico">
 
     <i:Interaction.Behaviors>
