unclosable window behavior

--- a/Ubiquitous2/View/MusicTickerWindow.xaml
+++ b/Ubiquitous2/View/MusicTickerWindow.xaml
@@ -32,6 +32,7 @@
     <i:Interaction.Behaviors>
         <Interactivity:WindowPersistentLocationBehavior WindowName="MusicTickerWindow"/>
         <Interactivity:DragWindow/>
+        <Interactivity:UnclosableWindow/>
     </i:Interaction.Behaviors>
 
     <Grid>
