--- a/Ubiquitous2/View/StatusWindow.xaml
+++ b/Ubiquitous2/View/StatusWindow.xaml
@@ -20,6 +20,7 @@
     <i:Interaction.Behaviors>
         <Interactivity:WindowPersistentLocationBehavior WindowName="StatusWindow"/>
         <Interactivity:DragWindow/>
+        <Interactivity:UnclosableWindow/>
     </i:Interaction.Behaviors> 
     
     <Window.Resources>
