--- a/Ubiquitous2/View/SettingsWindow.xaml
+++ b/Ubiquitous2/View/SettingsWindow.xaml
@@ -19,6 +19,7 @@
         Title="SettingsWindow" Icon="..\ubiquitous smile.ico" MinWidth="400" Width="500" MinHeight="250" WindowStartupLocation="Manual" Height="400">
     <i:Interaction.Behaviors>
         <Interactivity:WindowPersistentLocationBehavior WindowName="SettingsWindow"/>
+        <Interactivity:UnclosableWindow/>
     </i:Interaction.Behaviors>
     <Window.DataContext>
         <Binding Path="Settings" Source="{StaticResource Locator}"/>
