--- a/Ubiquitous2/View/StreamTopicSectionView.xaml
+++ b/Ubiquitous2/View/StreamTopicSectionView.xaml
@@ -9,22 +9,18 @@
              DataContext="{Binding}"    
              d:DesignHeight="300" d:DesignWidth="364.179">
     
-    <Grid Margin="5" VerticalAlignment="Top" Background="White">
-        <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition Height="60"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="90"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
-        <Image Height="80" Width="80" Source="{Binding ChannelIcon}" Grid.RowSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-
-        <Controls:EditBox Grid.Column="1" EnableSuggestion="{Binding EnableGameSuggestion}" CommandNeedSuggestion="{Binding CommandNeedSuggestion}" Suggestions="{Binding GameSuggestions}" Text="{Binding StreamInfo.CurrentGame.Name, Mode=TwoWay}" Watermark="Game title" BorderThickness="1,1,0,0" BorderBrush="#FF686868"/>
-        <TextBox Text="Topic" Visibility="{Binding ElementName=Topic, Path=Text.IsEmpty, Converter={StaticResource boolToVisibilityConverter}}" Panel.ZIndex="-1" Foreground="Gray" Grid.Column="2"  FontStyle="Italic" VerticalContentAlignment="Center" BorderBrush="Gray" BorderThickness="0"/>
-        <TextBox Text="{Binding StreamInfo.Topic,Mode=TwoWay}" BorderBrush="#FF686868" BorderThickness="1,1,1,0" Name="Topic" Background="Transparent"  Grid.Column="2"  VerticalContentAlignment="Center"/>
-        <TextBox Text="Description" Visibility="{Binding ElementName=Description, Path=Text.IsEmpty, Converter={StaticResource boolToVisibilityConverter}}" Panel.ZIndex="-1" Foreground="Gray" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2"  FontStyle="Italic" BorderThickness="0"/>
-        <TextBox Text="{Binding StreamInfo.Description,Mode=TwoWay}" BorderBrush="#FF686868" BorderThickness="1" Name="Description" Background="Transparent" Grid.Column="1"  Grid.ColumnSpan="2" Grid.Row="1"  Margin="0"/>
+    <Grid Margin="5" VerticalAlignment="Top" Background="#FFFFEA8E">
+        <Border Padding="5" BorderBrush="#FF5F5F5F" BorderThickness="1">
+            <DockPanel>
+                <Image Height="16" Width="16" Source="{Binding ChannelIcon}" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,5,0"/>
+                <StackPanel Orientation="Vertical">
+                    <Controls:EditBox Height="24" Visibility="{Binding StreamInfo.HasGame, Converter={StaticResource boolToVisibilityConverter}}" EnableSuggestion="{Binding EnableGameSuggestion}" CommandNeedSuggestion="{Binding CommandNeedSuggestion}" Suggestions="{Binding GameSuggestions}" Text="{Binding StreamInfo.CurrentGame.Name, Mode=TwoWay}" Watermark="Game title" VerticalAlignment="Top" />
+                    <Line Visibility="{Binding StreamInfo.HasTopic, Converter={StaticResource boolToVisibilityConverter}}" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Stroke="Black" X2="{Binding ActualWidth, RelativeSource={RelativeSource Self}}"  StrokeDashArray="2 2" StrokeThickness="1" />
+                    <Controls:EditBox Height="24" Visibility="{Binding StreamInfo.HasTopic, Converter={StaticResource boolToVisibilityConverter}}" EnableSuggestion="False" Text="{Binding StreamInfo.Topic,Mode=TwoWay}" Watermark="Topic" VerticalAlignment="Top"/>
+                    <Line Visibility="{Binding StreamInfo.HasDescription, Converter={StaticResource boolToVisibilityConverter}}" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Stroke="Black" X2="{Binding ActualWidth, RelativeSource={RelativeSource Self}}"  StrokeDashArray="2 2" StrokeThickness="1" />
+                    <Controls:EditBox ScrollViewer.VerticalScrollBarVisibility="Auto" Visibility="{Binding StreamInfo.HasDescription, Converter={StaticResource boolToVisibilityConverter}}" Height="30" EnableSuggestion="False" Text="{Binding StreamInfo.Description,Mode=TwoWay}" Watermark="Description" VerticalContentAlignment="Top" VerticalAlignment="Top"/>
+                </StackPanel>
+            </DockPanel>
+        </Border>
     </Grid>
 </UserControl>
