--- a/Ubiquitous2/View/StreamTopicSectionView.xaml
+++ b/Ubiquitous2/View/StreamTopicSectionView.xaml
@@ -8,8 +8,8 @@
              mc:Ignorable="d" 
              DataContext="{Binding}"    
              d:DesignHeight="300" d:DesignWidth="364.179">
-    
-    <Grid Margin="5" VerticalAlignment="Top" Background="#FFFFEA8E">
+
+    <Grid IsEnabled="{Binding StreamInfo.CanBeChanged}" Visibility="{Binding StreamInfo.CanBeRead, Converter={StaticResource boolToVisibilityConverter}}" Margin="5" VerticalAlignment="Top" Background="#FFFFEA8E">
         <Border Padding="5" BorderBrush="#FF5F5F5F" BorderThickness="1">
             <DockPanel>
                 <Image Height="16" Width="16" Source="{Binding ChannelIcon}" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,5,0"/>
