--- a/Ubiquitous2/App.xaml
+++ b/Ubiquitous2/App.xaml
@@ -7,6 +7,7 @@
       <!--Global View Model Locator-->
       <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" />
       <settings:Ubiquitous x:Key="Settings" />
+      <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" />
     </ResourceDictionary>
   </Application.Resources>
 </Application>
