--- a/Ubiquitous2/View/DashBoardWindow.xaml
+++ b/Ubiquitous2/View/DashBoardWindow.xaml
@@ -37,12 +37,18 @@
                 </Grid.RowDefinitions>                
                 <StackPanel Grid.Row="0" Orientation="Horizontal" VerticalAlignment="Center" Margin="0,8" Height="26">
                     <Label HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="Bold">Preset:</Label>
-                    <Controls:EditComboBox ItemsSource="{Binding TopicPresets,Mode=TwoWay}" MinWidth="100"/>                    
-                    <Button Content="Apply" Padding="15,1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="13,0,0,0"/>
+                    <Controls:EditComboBox  MinWidth="100"
+                                            ItemsSource="{Binding TopicPresets,Mode=TwoWay}" 
+                                            CommandRename="{Binding RenamePreset}"
+                                            CommandAdd="{Binding AddPreset}"
+                                            CommandSelect="{Binding SelectPreset}"
+                                            CommandDelete="{Binding DeletePreset}"
+                                           />
+                    <Button Command="{Binding UpdateWeb}" Content="Update web" Padding="15,1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="13,0,0,0"/>
+                    <Button Command="{Binding LoadWeb}" Content="Load from web" Padding="15,1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10,0,0,0"/>
                 </StackPanel>
                 <TextBlock Grid.Row="1" Margin="5,0,0,0">Batch topic change. Anonymous accounts are hidden!</TextBlock>
                 <DockPanel Grid.Row="2">
-
                     <ItemsControl ItemsSource="{Binding StreamTopics}"
 					Padding="0"
 					HorizontalContentAlignment="Left"
