--- a/Ubiquitous2/View/StreamTopicSectionView.xaml
+++ b/Ubiquitous2/View/StreamTopicSectionView.xaml
@@ -9,18 +9,29 @@
              DataContext="{Binding}"    
              d:DesignHeight="300" d:DesignWidth="364.179">
 
-    <Grid IsEnabled="{Binding StreamInfo.CanBeChanged}" Visibility="{Binding StreamInfo.CanBeRead, Converter={StaticResource boolToVisibilityConverter}}" Margin="5" VerticalAlignment="Top" Background="#FFFFEA8E">
-        <Border Padding="5" BorderBrush="#FF5F5F5F" BorderThickness="1">
-            <DockPanel>
-                <Image Height="16" Width="16" Source="{Binding ChannelIcon}" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,5,0"/>
-                <StackPanel Orientation="Vertical">
-                    <Controls:EditBox Height="24" Visibility="{Binding StreamInfo.HasGame, Converter={StaticResource boolToVisibilityConverter}}" EnableSuggestion="{Binding EnableGameSuggestion}" CommandNeedSuggestion="{Binding CommandNeedSuggestion}" Suggestions="{Binding GameSuggestions}" Text="{Binding StreamInfo.CurrentGame.Name, Mode=TwoWay}" Watermark="Game title" VerticalAlignment="Top" />
-                    <Line Visibility="{Binding StreamInfo.HasTopic, Converter={StaticResource boolToVisibilityConverter}}" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Stroke="Black" X2="{Binding ActualWidth, RelativeSource={RelativeSource Self}}"  StrokeDashArray="2 2" StrokeThickness="1" />
-                    <Controls:EditBox Height="24" Visibility="{Binding StreamInfo.HasTopic, Converter={StaticResource boolToVisibilityConverter}}" EnableSuggestion="False" Text="{Binding StreamInfo.Topic,Mode=TwoWay}" Watermark="Topic" VerticalAlignment="Top"/>
-                    <Line Visibility="{Binding StreamInfo.HasDescription, Converter={StaticResource boolToVisibilityConverter}}" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Stroke="Black" X2="{Binding ActualWidth, RelativeSource={RelativeSource Self}}"  StrokeDashArray="2 2" StrokeThickness="1" />
-                    <Controls:EditBox ScrollViewer.VerticalScrollBarVisibility="Auto" Visibility="{Binding StreamInfo.HasDescription, Converter={StaticResource boolToVisibilityConverter}}" Height="30" EnableSuggestion="False" Text="{Binding StreamInfo.Description,Mode=TwoWay}" Watermark="Description" VerticalContentAlignment="Top" VerticalAlignment="Top"/>
+    <Grid IsEnabled="{Binding StreamInfo.CanBeChanged}" Visibility="{Binding StreamInfo.CanBeRead, Converter={StaticResource boolToVisibilityConverter}}" Margin="5" VerticalAlignment="Top">
+        <Grid.Background>
+            <LinearGradientBrush StartPoint="0,100" EndPoint="354,100" MappingMode="Absolute">
+                <GradientStop Color="#FF2C281A" Offset="0.066"/>
+                <GradientStop Color="#FFFFE691" Offset="0.1"/>
+            </LinearGradientBrush>
+        </Grid.Background>
+        <Border Padding="0" BorderBrush="#FF5F5F5F" BorderThickness="1">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="24"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+
+                <Image Grid.Column="0" Height="16" Width="16" Source="{Binding ChannelIcon}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                <StackPanel Orientation="Vertical" Margin="9,0,0,0" Grid.Column="1" >
+                    <Controls:EditBox Height="24" Visibility="{Binding StreamInfo.HasGame, Converter={StaticResource boolToVisibilityConverter}}" EnableSuggestion="{Binding EnableGameSuggestion}" CommandNeedSuggestion="{Binding CommandNeedSuggestion}" Suggestions="{Binding GameSuggestions}" Text="{Binding StreamInfo.CurrentGame.Name, Mode=TwoWay}" Watermark="Game title" VerticalAlignment="Top" Foreground="#FFFFB81E" />
+                    <Line Visibility="{Binding StreamInfo.HasTopic, Converter={StaticResource boolToVisibilityConverter}}" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Stroke="#FFAAAAAA" X2="{Binding ActualWidth, RelativeSource={RelativeSource Self}}"  StrokeDashArray="2 2" StrokeThickness="1" />
+                    <Controls:EditBox Height="24" Visibility="{Binding StreamInfo.HasTopic, Converter={StaticResource boolToVisibilityConverter}}" EnableSuggestion="False" Text="{Binding StreamInfo.Topic,Mode=TwoWay}" Watermark="Topic" VerticalAlignment="Top" Foreground="#FFFFB81E"/>
+                    <Line Visibility="{Binding StreamInfo.HasDescription, Converter={StaticResource boolToVisibilityConverter}}" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Stroke="#FFAAAAAA" X2="{Binding ActualWidth, RelativeSource={RelativeSource Self}}"  StrokeDashArray="2 2" StrokeThickness="1" />
+                    <Controls:EditBox ScrollViewer.VerticalScrollBarVisibility="Auto" Visibility="{Binding StreamInfo.HasDescription, Converter={StaticResource boolToVisibilityConverter}}" Height="30" EnableSuggestion="False" Text="{Binding StreamInfo.Description,Mode=TwoWay}" Watermark="Description" VerticalContentAlignment="Top" VerticalAlignment="Top" Foreground="#FFFFB81E"/>
                 </StackPanel>
-            </DockPanel>
+            </Grid>
         </Border>
     </Grid>
 </UserControl>
