--- a/Ubiquitous2/View/SettingSectionView.xaml
+++ b/Ubiquitous2/View/SettingSectionView.xaml
@@ -8,8 +8,9 @@
              xmlns:ViewModel="clr-namespace:UB.ViewModel"
              xmlns:View="clr-namespace:UB.View"
              xmlns:gif="http://wpfanimatedgif.codeplex.com"
+             xmlns:Converter="clr-namespace:UB.Converter"
              DataContext="{Binding Source={StaticResource Locator},Path=SettingsSection}"
-             mc:Ignorable="d"
+             mc:Ignorable="d"    
              UseLayoutRounding="True"
              Focusable="False"
              MinWidth="30"
@@ -24,7 +25,8 @@
             <Setter Property="Margin" Value="0"/>
         </Style>
         <BooleanToVisibilityConverter x:Key="boolToVisibilityConverter"></BooleanToVisibilityConverter>
-
+        <Converter:NonEmptyToVisibility x:Key="nonEmptyToVisibilityConverter"></Converter:NonEmptyToVisibility>
+        
     </UserControl.Resources>
     <Grid>
         <Border BorderThickness="0,1,0,0" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Padding="0,8,0,0">
@@ -44,8 +46,8 @@
                     <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,5,0"><Hyperlink Command="{Binding Restart}"><TextBlock>restart</TextBlock></Hyperlink></TextBlock>
                     <Image Visibility="{Binding IsLoaderVisible, Converter={StaticResource boolToVisibilityConverter}}" Width="16" Height="16" gif:ImageBehavior.AnimatedSource="/Ubiquitous2;component/Resources/loader.gif" gif:ImageBehavior.RepeatBehavior="Forever" Margin="0,0,5,0" HorizontalAlignment="Left" VerticalAlignment="Center" />
                 </StackPanel>
-                    
-            <Expander Margin="5"  HorizontalAlignment="Left" HorizontalContentAlignment="Left"  Padding="0"  IsExpanded="{Binding Expanded}" Style="{DynamicResource ExpanderStyle}" VerticalAlignment="Top">
+                <TextBlock Visibility="{Binding Status.LastError, Converter={StaticResource nonEmptyToVisibilityConverter}}" Text="{Binding Status.LastError}" Margin="25,0,0,0" FontWeight="Bold" Foreground="#FFC90000"/>
+                <Expander Margin="5"  HorizontalAlignment="Left" HorizontalContentAlignment="Left"  Padding="0"  IsExpanded="{Binding Expanded}" Style="{DynamicResource ExpanderStyle}" VerticalAlignment="Top">                    
                 <ItemsControl ItemsSource="{Binding SettingsFields}"
                       Padding="0"
                       Margin="0,0,20,0"
