gaminglive ping tweak

--- a/Ubiquitous2/View/MainWindow.xaml
+++ b/Ubiquitous2/View/MainWindow.xaml
@@ -18,7 +18,9 @@
         Background="{x:Null}" 
         ResizeMode="NoResize"
         Margin="0" 
-        Padding="0" Icon="/Ubiquitous2;component/Resources/ubiquitous smile.ico" d:DesignWidth="275" d:DesignHeight="394" Width="275" Height="394"
+        TextOptions.TextRenderingMode="Aliased"
+        Padding="0" Icon="/Ubiquitous2;component/Resources/ubiquitous smile.ico" 
+        d:DesignWidth="275" d:DesignHeight="394" Width="275" Height="394"
         >
     <i:Interaction.Behaviors>
         <Interactivity:WindowPersistentLocationBehavior WindowName="MainWindow"/>
